--- a/Acetaminophen.html
+++ b/Acetaminophen.html
@@ -8,7 +8,7 @@
 </head>
 <body id="all">
     </div>
-    <h1 id="head"><a href="home.html" id="link">Acetaminophen</a></h1>
+    <h1 id="head"><a href="index.html" id="link">Acetaminophen</a></h1>
     <marquee id="sss" behavior="alternate" scrollamount="10">!!!These Drugs are predicted not prescribed!!!</marquee>
     <div id="about">
     <h3 >About</h3>
