--- a/aboutus.html
+++ b/aboutus.html
@@ -8,7 +8,7 @@
 </head>
 <body id="z">
     <div id="l">
-        <a href="home.html"><button class="btn btn-outline-info">Home</button></a>
+        <a href="index.html"><button class="btn btn-outline-info">Home</button></a>
         <a href="aboutus.html"><button class="btn btn-outline-info">About us</button></a>
     </div>
     <h1 id="ab">Hello🖐️<br>Health is Wealth</h1>
